--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ a:hover {
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%) ;
+    transform: translate(-50%, -50%);
     text-align: center;
     max-width: 520px;
     padding: 32px;
@@ -52,4 +52,43 @@ a:hover {
 
 .icons a:hover {
     color: #1565c0;
+}
+
+body {
+    margin: 0;
+    font-size: 20px;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 18px 50px;
+    text-decoration: none;
+    font-size: 30px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #db4714;
+    color: white;
+}
+
+footer {
+    padding-top: 15px;
+    background-color: #333;
+    color: #ffffff;
+}
+
+.subtitle{
+    color: #70b8dd;
 }
