--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,13 @@ footer {
 .publi_journal{
     font-style: normal;
 }
+
+.in_link{
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.in_link:hover{
+    color: #000000;
+}
