--- a/css/publi.css
+++ b/css/publi.css
@@ -3,3 +3,36 @@ html {
     font-size: larger;
     font-weight: 300;
 }
+
+.publi_title{
+    padding: 100px;
+    font-weight: bolder;
+}
+
+.publi_authors{
+    font-style: italic;
+    padding-bottom: 50px;
+}
+
+.publi_teaser{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+.publi_abstract{
+    text-align: justify;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 80px;
+}
+
+.publi_video{
+    width: 1100px;
+    height: 720px;
+    display: block;
+    margin: 0 auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
