--- a/css/index.css
+++ b/css/index.css
@@ -4,17 +4,7 @@ html {
     font-weight: 300;
 }
 
-#content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    max-width: 520px;
-    padding: 32px;
-    line-height: 1.6em;
-}
+
 
 .avatar {
     border-radius: 50%;
@@ -46,7 +36,7 @@ html {
 }
 
 body {
-    margin: 0;
+    margin: 0px;
     font-size: 20px;
 }
 
@@ -72,6 +62,23 @@ body {
 .topnav a.active {
     background-color: #db4714;
     color: white;
+}
+
+.big_container{
+    max-width: fit-content !important;
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+    display: flex;
+    width: 100%;
+}
+
+.left_main_col{
+    float: left;
+    width: 35% !important;
+}
+
+.right_main_col{
+    width: 65% !important;
 }
 
 footer {
