--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,7 @@ html {
 body {
     margin: 0px;
     font-size: 20px;
+    background-image: url("../background_erosion_edit.png");
 }
 
 .topnav {
@@ -150,6 +151,9 @@ footer {
 .row{
     padding-top: 20px;
     padding-bottom: 20px;
+    background-color: #e8e8e8;
+    width: 75%;
+    margin: auto !important;
 }
 
 .mini_project{
